# copy_channel_telegram_bot

./: .dockerignore  .env.override  Dockerfile  README.md  pyproject.toml
.github/workflows/: code-review-bot.yaml  code-review-gpt.yml
copy_channel_telegram_bot/: __main__.py  config.py  utils.py
